# sophia-multimodal-rag

./: .gitignore  README.md  app.py  architecture.md  config.py  generator.py  ingest.py  pyproject.toml  requirements.txt  retriever.py  run_test_queries.py
logs/: test_queries_20260224_171026.txt  test_queries_20260224_183710.txt
